# secret-friend-app

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: branch-name.yml  ci.yml  deploy_cluster.yml  deploy_dynamodb.yml  deploy_service.yml  publish_docker.yml
infra/terraform/cluster/: data.tf  locals.tf  output.tf  vars.tf
infra/terraform/dynamodb/: data.tf  output.tf  policies.tf  provider.tf  role.tf  tables.tf  vars.tf
infra/terraform/envs/dev/: backend.hcl
infra/terraform/service/: locals.tf  output.tf  services.tf  tasks.tf  terraform.tfvars.tmpl  vars.tf
src/: main.py
src/api/: exception_handlers.py
src/api/v1/: router.py
src/api/v1/routes/: game.py  health.py
src/contracts/repositories/: __init__.py  assignment_repository.py  base_repository.py  group_repository.py
src/contracts/repositories/participant/: __init__.py  participant_repository_base_contract.py  participant_repository_contract.py
src/core/: __init__.py  config.py  debug.py  dependencies.py  exceptions.py
src/infrastructure/dynamodb/: init_tables.py  transaction_context.py  utils.py
src/infrastructure/dynamodb/mappers/: __init__.py  assignment_pynamodb_mapper.py  participant_mapper.py  participant_pynamodb_mapper.py
src/infrastructure/dynamodb/models/: __init__.py  assignment_model.py  assignment_pynamodb_model.py  game_model.py  game_participant.py  group_model.py  group_pynamodb_model.py  participant_model.py  (+1 more)
src/mappers/: __init__.py  assignment_schema_mapper.py  participant_schema_mapper.py
src/models/: __init__.py  assignment_models.py  game_model.py  group_models.py  participant_model.py
src/repositories/: __init__.py  assignment_repository.py  base_repository.py  game_repository.py  group_repository.py
src/schema/: __init__.py  assignment.py  game.py  participant.py
src/schema/mappers/: participant_schema_mapper.py
src/services/: __init__.py  assignment_service.py  game_service.py  group_service.py
src/shared/: __init__.py  matching.py
tests/: conftest.py  dynamodb_connection_test.py
tests/repositories/: game_participant_repository.py  test_assignment_repository.py  test_game_participant_repository.py  test_group_repository.py  test_participant_repository.py
tests/shared/: test_matching.py
(+11 files in other folders)
