[project]
name = "secret-friend-app"
version = "0.1.0"
description = "Secreat friend app allow shared gifts with friends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "starlette==0.50.0",
    # Data validation
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    # AWS SDK
    "boto3==1.42.24",
    "botocore==1.42.24",
    "s3transfer==0.16.0",
    # DynamoDB ORM
    "pynamodb==6.1.0",
    # Configuration
    "python-dotenv==1.2.1",
    # Type annotations support
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    # Async networking
    "anyio==4.12.1",
    "h11==0.16.0",
    # Security/Crypto
    "cryptography==46.0.3",
    "cffi==2.0.0",
    "pycparser==2.23",
    # HTTP client dependencies
    "certifi==2026.1.4",
    "urllib3==2.6.3",
    "idna==3.11",
    "charset-normalizer==3.4.4",
    # AWS utilities
    "jmespath==1.0.1",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    # Templating (FastAPI dependency)
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    # Packaging utilities
    "packaging==25.0",
    "platformdirs==4.5.1",
]

[dependency-groups]
dev = [
    # Linting and formatting
    "black==25.12.0",
    "ruff==0.14.11",
    "mypy-extensions==1.1.0",
    "pathspec==1.0.3",
    "click==8.3.1",
    # Testing
    "pytest==9.0.2",
    "moto==5.1.19",
    "testcontainers[localstack]==4.12.0",
    "responses==0.25.8",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    # Debugging
    "debugpy==1.8.11",
    # Git hooks
    "pre-commit==4.5.1",
    "cfgv==3.5.0",
    "distlib==0.4.0",
    "filelock==3.20.3",
    "identify==2.6.15",
    "nodeenv==1.10.0",
    "virtualenv==20.36.1",
    # Development tools
    "pygments==2.19.2",
    "pyyaml==6.0.3",
    "werkzeug==3.1.4",
    "xmltodict==1.0.2",
    "requests==2.32.5",
    "pytokens==0.3.0",
]

[tool.ruff]
line-length = 150
target-version = "py311"
ignore = ["B008","E722","B904"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 150
target-version = ["py311"]